fix swagger issue
